<resources>
    <string name="app_name">TimeNote</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="登录">登录</string>
    <string name="注册">注册</string>
    <string name="请输入用户名">请输入用户名</string>
    <string name="请输入密码">请输入密码</string>
    <string name="logo">logo</string>
    <string name="请确认密码">请确认密码</string>
    <string name="请输入邮箱">请输入邮箱</string>
    <string name="确认注册">确认注册</string>
    <string name="已有账号请登录">已有账号？请登录</string>
    <string name="请输入昵称">请输入昵称</string>
    <string name="用户名">用户名</string>
    <string name="昵称">昵称</string>
    <string name="密码">密码</string>
    <string name="确认密码">确认密码</string>
    <string name="邮箱">邮箱</string>
    <string name="创建账号">创建账号</string>
    <string name="忘记密码">忘记密码</string>
    <string name="任务">任务清单</string>
    <string name="返回">返回</string>
    <string name="邮箱格式错误">邮箱格式错误,请输入正确的邮箱</string>
    <string name="密码格式错误">密码格式错误，请输入8~20个字符</string>
    <string name="密码不一致">输入密码不一致</string>
    <string name="请输入验证码">请输入验证码</string>
    <string name="取消">取消</string>
    <string name="确认">确认</string>
    <string name="验证码错误">验证码错误</string>
    <string name="重新发送">重新发送</string>
    <string name="验证码">验证码</string>
    <string name="发送验证码">发送验证码</string>
    <string name="新密码">新密码</string>
    <string name="请输入新密码">请输入新密码</string>
    <string name="请确认新密码">请确认新密码</string>
    <string name="按优先级排序">按优先级排序</string>
    <string name="按时间排序">按时间排序</string>
    <string name="隐藏已完成">隐藏已完成</string>
    <string name="显示已完成">显示已完成</string>
    <string name="日历">日历视图</string>
    <string name="叶子">叶子计时</string>
    <string name="设置">设置</string>
    <string name="测试">PagerTabStrip效果演示</string>
    <string name="所有">所有</string>
    <string name="_26">26</string>
    <string name="a">A</string>
    <string name="level">level</string>
    <string name="五月">五月</string>
    <string name="叶子计时">叶子计时</string>
    <string name="开始专注">开始专注</string>
    <string name="今天">今天</string>
    <string name="垃圾桶">垃圾桶</string>
    <string name="近三天">近三天</string>
    <string name="头像名">sky</string>
    <string name="个性签名">熬过这周我就去吃海底捞</string>
    <string name="自定义">自定义</string>
    <string name="月视图">月视图</string>
    <string name="准备做什么">准备做什么？</string>
    <string name="请选择清单">请选择清单</string>
    <string name="请选择优先级">请选择优先级</string>
    <string name="高">高</string>
    <string name="中">中</string>
    <string name="低">低</string>
    <string name="无">无</string>
    <string name="叶子背景">叶子背景</string>
    <string name="晚上好">晚上好</string>
    <string name="叶子文本">今天还没收获叶子</string>
    <string name="事务文本">事务文本</string>
    <string name="完成">完成</string>
    <string name="清单名称">清单名称</string>
    <string name="头像">头像</string>
    <string name="用户昵称">用户昵称</string>
    <string name="默认提醒时间">默认提醒时间</string>
    <string name="铃声">铃声</string>
    <string name="振动">振动</string>
    <string name="提醒频率">提醒频率</string>
    <string name="叶子时长">叶子时长</string>
    <string name="时长">25分钟</string>
    <string name="叶子text">1</string>
    <string name="提醒时间">1:00</string>
    <string name="提醒频率设置">每周一次</string>
    <string name="收集箱">收集箱</string>
    <string name="事务名称">事务名称</string>
    <string name="描述">描述</string>
    <string name="设置优先级">设置优先级</string>
    <string name="保存">保存</string>
    <string name="删除">删除</string>
    <string name="用户">用户</string>
    <string name="退出登录">退出登录</string>
    <string name="个人中心">个人中心</string>
    <string-array name="周期模式1">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>
    <string-array name="time_select">
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>18:00</item>
        <item>21:00</item>
        <item>自定义</item>
    </string-array>
    <string-array name="time_ring">
        <item>nono</item>
        <item>默认</item>
    </string-array>
    <string-array name="time_even">
        <item>从不</item>
        <item>每天</item>
        <item>每周工作日（周一至周五）</item>
        <item>每六</item>
        <item>每月（当天）</item>
        <item>每年（当天）</item>
        <item>自定义</item>
    </string-array>
</resources>
