<?xml version="1.0" encoding="utf-8"?>
    <menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group
            android:checkableBehavior="single">
            <item
                android:id="@+id/favorite"
                android:icon="@drawable/yezi1"
                android:checkable="true"
                android:title="@string/所有"/>
        </group>
        <item
            android:id="@+id/wallet"
            android:icon="@drawable/yezi1"

            android:title="@string/今天"/>
        <item
            android:id="@+id/photo"
            android:icon="@drawable/yezi1"
            android:title="@string/垃圾桶"/>
        <item
            android:id="@+id/dress"
            android:icon="@drawable/yezi1"
            android:title="@string/近三天"/>
        <item
            android:id="@+id/file"
            android:icon="@drawable/yezi1"
            android:title="@string/自定义"/>
</menu>