<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/end_title_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Ui.MainActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/myViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/rg_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/task_1"
            style="@style/none_2"
            android:layout_width="95dp"
            android:drawableTop="@drawable/task"
            android:gravity="center"
            android:text="@string/任务" />

        <RadioButton
            android:id="@+id/calendar_1"
            style="@style/none_2"
            android:layout_width="95dp"
            android:drawableTop="@drawable/calendar"
            android:gravity="center"
            android:text="@string/日历" />

        <RadioButton
            android:id="@+id/yezi_1"
            style="@style/none_2"
            android:layout_width="95dp"
            android:gravity="center"
            android:drawableTop="@drawable/yezi"
            android:text="@string/叶子" />

        <RadioButton
            android:id="@+id/setup_1"
            style="@style/none_2"
            android:layout_width="95dp"
            android:drawableTop="@drawable/setup"
            android:gravity="center"
            android:text="@string/设置" />


    </RadioGroup>
</LinearLayout>