<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.administrator.timenote.Ui.Forgot_pwd">

    <include
        android:id="@+id/include"
        layout="@layout/asd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </FrameLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/邮箱"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="30dp"
        android:text="@string/验证码"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <EditText
        android:id="@+id/email_3"
        style="@style/ThemeOverlay.AppCompat.Dialog.Alert"
        android:layout_width="250dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:inputType="textWebEmailAddress"
        android:background="#ffffff"
        android:hint="@string/请输入邮箱"
        android:maxLength="40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <View
        android:id="@+id/view4"
        android:layout_width="250dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_3" />

    <EditText
        android:id="@+id/Verification_code_3"
        style="@style/ThemeOverlay.AppCompat.Dialog.Alert"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:background="#FFFFFF"
        android:hint="@string/请输入验证码"
        android:maxLength="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <View
        android:id="@+id/view5"
        android:layout_width="150dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.282"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Verification_code_3" />

    <Button
        android:id="@+id/send_Verification_code_2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="105dp"
        android:background="#169BD5"
        android:text="@string/发送验证码"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toEndOf="@+id/Verification_code_3"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <Button
        android:id="@+id/resent_Verification_code_3"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="105dp"
        android:background="#169BD5"
        android:text="@string/重新发送"
        android:textColor="#40000000"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.267"
        app:layout_constraintStart_toEndOf="@+id/Verification_code_3"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <Button
        android:id="@+id/sure_Verification_code_2"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/loadbutton1"
        android:text="@string/确认"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/email_error_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/邮箱格式错误"
        android:textColor="#ff0033"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <TextView
        android:id="@+id/Verification_code_error_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/验证码错误"
        android:textColor="#ff0033"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5" />


</android.support.constraint.ConstraintLayout>
