<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/level_select"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="#00000000"
    android:visibility="visible"
    >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/请选择优先级"
        android:textColor="#000000"
        android:background="#ffffff"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level0_button">

        <Button
            android:id="@+id/back_5"
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:layout_marginLeft="280dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/none"
            android:text="@string/取消"
            android:textColor="#169BD5">
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/level3_button"
        android:drawableLeft="@drawable/level3"
        android:drawableStart="@drawable/level3"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:gravity="start"
        android:background="@drawable/select"
        android:layout_marginTop="0dp"
        android:text="@string/高"
        android:padding="3dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        />

    <Button
        android:id="@+id/level2_button"
        android:layout_width="350dp"
        android:gravity="start"
        android:drawableLeft="@drawable/level2"
        android:drawableStart="@drawable/level2"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/select"
        android:textSize="20sp"
        android:text="@string/中"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level3_button" />

    <Button
        android:id="@+id/level1_button"
        android:drawableLeft="@drawable/level1"
        android:drawableStart="@drawable/level1"
        android:gravity="start"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:textSize="20sp"
        android:background="@drawable/select"
        android:text="@string/低"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level2_button" />

    <Button
        android:id="@+id/level0_button"
        android:drawableLeft="@drawable/level0"
        android:drawableStart="@drawable/level0"
        android:gravity="start"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:layout_marginTop="0dp"
        android:background="@drawable/select"
        android:text="@string/无"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level1_button" />
</android.support.constraint.ConstraintLayout>